--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.0.1"
 description = "An example Python Package"
 readme = "README.md"
 requires-python = ">=3.13,<3.14"
-dependencies = []
+dependencies = [
+    "pyqt5>=5.15.11",
+]
 
 [dependency-groups]
 dev = [
